--- a/Miwok-Starter/app/src/main/AndroidManifest.xml
+++ b/Miwok-Starter/app/src/main/AndroidManifest.xml
@@ -13,9 +13,10 @@
         <activity android:name=".FamilyActivity"
             android:label="@string/category_family"/>
         <activity android:name=".ColorsActivity"
-            android:label="@string/category_colors"/>
+            android:label="@string/category_colors" />
         <activity android:name=".NumbersActivity"
-            android:label="@string/category_numbers"/>
+            android:label="@string/category_numbers"
+            android:theme="@style/NumbersActivity"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
